# diagrams-pandoc

./: diagrams-pandoc.cabal  stack.yaml
src/: Main.hs
src/Text/Pandoc/: Diagrams.hs
