name:                diagrams-pandoc
version:             0.4.0.0
synopsis:            A Pandoc filter to express diagrams inline using the Haskell EDSL _Diagrams_
description: 'diagrams-pandoc' replaces appropriately marked code
    blocks in pandoc input with images.  The code blocks are compiled
    using the Haskell EDSL Diagrams.  Each block should define a
    Diagram named 'example', to be output.  This name and other
    defaults can be overridden by command-line arguments to the
    diagrams-pandoc program.
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          diagrams-discuss@googlegroups.com
category:            Text
build-type:          Simple
Bug-reports:         http://github.com/diagrams/diagrams-pandoc/issues
Extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10
Tested-with:         GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-pandoc.git

library
  build-depends:       base,
                       pandoc-types,
                       diagrams-lib,
                       linear,
                       diagrams-builder,
                       diagrams-cairo,
                       palette,
                       directory,
                       filepath,
                       semigroups,
                       text
  exposed-modules: Text.Pandoc.Diagrams
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall

executable diagrams-pandoc
  main-is:             src/Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       pandoc-types,
                       diagrams-lib,
                       linear,
                       diagrams-builder,
                       diagrams-cairo,
                       palette,
                       directory,
                       filepath,
                       diagrams-pandoc,
                       optparse-applicative,
                       text
  -- hs-source-dirs:
  default-language:    Haskell2010
